调整清理项目时的自定义规则, 使其能移除 exp 和 lib 文件

--- a/src/map/map-server.vcxproj
+++ b/src/map/map-server.vcxproj
@@ -328,6 +328,8 @@
     <Delete Files="$(SolutionDir)serv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)mapserv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)runserver.bat" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)map-server.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)map-server-pre.pdb" ContinueOnError="true" />
   </Target>
