--- a/src/char/char-server.vcxproj
+++ b/src/char/char-server.vcxproj
@@ -251,6 +251,8 @@
     <Delete Files="$(SolutionDir)serv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)charserv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)runserver.bat" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)char-server.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)char-server.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)char-server-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)char-server-pre.pdb" ContinueOnError="true" />
   </Target>
