--- a/src/login/login-server.vcxproj
+++ b/src/login/login-server.vcxproj
@@ -225,6 +225,8 @@
     <Delete Files="$(SolutionDir)serv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)logserv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)runserver.bat" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)login-server.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)login-server-pre.pdb" ContinueOnError="true" />
   </Target>
