--- a/src/tool/csv2yaml.vcxproj
+++ b/src/tool/csv2yaml.vcxproj
@@ -221,6 +221,8 @@
     <Delete Files="$(SolutionDir)zlib.dll" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)serv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)csv2yaml.bat" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)csv2yaml.lib" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)csv2yaml.exp" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)csv2yaml-pre.exe" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)csv2yaml-pre.pdb" ContinueOnError="true" />
   </Target>
