--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -290,4 +290,11 @@ always_trigger_npc_killevent: 0
 // 若 OnNPCKillEvent 事件中有对话框需要用户确认或关闭, 就会导致 OnPCKillMvpEvent 被事件队列阻塞.
 always_trigger_mvp_killevent: 1
 
+// 有哪些单位默认开启战斗记录 [掩码选项]
+// 默认启用战斗记录的单位只要召唤出来就能记录输出和承伤情况
+// 而不必显式的调用 enable_batrec 来启用
+//
+// 默认值为: 542 (魔物 + 宠物 + 生命体 + 佣兵 + 元素精灵)
+batrec_autoenabled_unit: 542
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
