--- a/npc/re/scripts_warps.conf
+++ b/npc/re/scripts_warps.conf
@@ -51,4 +51,4 @@ npc: npc/re/warps/other/s_workshop.txt
 npc: npc/re/warps/other/sign.txt
 npc: npc/re/warps/other/un_myst.txt
 npc: npc/re/warps/other/verus.txt
-npc: npc/re/warps/guildcastles.txt
+//npc: npc/re/warps/guildcastles.txt
