--- a/npc/pre-re/scripts_main.conf
+++ b/npc/pre-re/scripts_main.conf
@@ -26,16 +26,16 @@ npc: npc/other/Global_Functions.txt
 npc: npc/other/CashShop_Functions.txt
 
 // ------------------- Common Script Files ----------------------
-import: npc/scripts_athena.conf
-import: npc/scripts_guild.conf
+//import: npc/scripts_athena.conf
+//import: npc/scripts_guild.conf
 import: npc/scripts_jobs.conf
 import: npc/scripts_mapflags.conf
 import: npc/scripts_monsters.conf
 import: npc/scripts_warps.conf
 
 // ----------------- Pre-Renewal Script Files -------------------
-import: npc/pre-re/scripts_athena.conf
-import: npc/pre-re/scripts_jobs.conf
+//import: npc/pre-re/scripts_athena.conf
+//import: npc/pre-re/scripts_jobs.conf
 import: npc/pre-re/scripts_mapflags.conf
 import: npc/pre-re/scripts_monsters.conf
 import: npc/pre-re/scripts_warps.conf
