--- a/npc/pre-re/scripts_warps.conf
+++ b/npc/pre-re/scripts_warps.conf
@@ -23,4 +23,4 @@ npc: npc/pre-re/warps/fields/yuno_fild.txt
 // --------------------------- Others ---------------------------
 npc: npc/pre-re/warps/other/arena.txt
 npc: npc/pre-re/warps/other/sign.txt
-npc: npc/pre-re/warps/guildcastles.txt
+//npc: npc/pre-re/warps/guildcastles.txt
