更新终端汉化数据库以便适配最新代码

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1320,8 +1320,8 @@ Body:
   Translation: "地图服务器 %d 没有任何地图.\n"
 - Original: "Map-server %d loading complete.\n"
   Translation: "地图服务器 %d 已加载完毕.\n"
-- Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "地图服务器已连接到角色服务器: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]' (whispername: %s).\n"
+  Translation: "地图服务器已连接到角色服务器: '[{CL_WHITE}]%s[{CL_RESET}]' (私信昵称: %s).\n"
 - Original: "Maps removed: '[{CL_WHITE}]%d[{CL_RESET}]'[{CL_CLL}].\n"
   Translation: "总共移除了 maps_athena.conf 中定义的 [{CL_WHITE}]%-3d[{CL_RESET}] 张地图[{CL_CLL}].\n"
 - Original: "Max chars per account '%d' exceeded limit. Defaulting to '%d'.\n"
@@ -2088,14 +2088,14 @@ Body:
   Translation: ""
 - Original: "[{CL_CYAN}]Console: [{CL_BOLD}]I'm Alive.[{CL_RESET}]\n"
   Translation: ""
-- Original: "[{CL_CYAN}][Debug][{CL_RESET}]:"
-  Translation: "[{CL_CYAN}][调试][{CL_RESET}]:"
+- Original: "[{CL_CYAN}][Debug][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_CYAN}][调试][{CL_RESET}]:[{CL_CLL}]"
 - Original: "[{CL_GREEN}]Website/Forum:[{CL_RESET}]\thttp://rathena.org/\n"
   Translation: ""
-- Original: "[{CL_GREEN}][Status][{CL_RESET}]:"
-  Translation: "[{CL_GREEN}][状态][{CL_RESET}]:"
-- Original: "[{CL_MAGENTA}][SQL][{CL_RESET}]:"
-  Translation: "[{CL_MAGENTA}][数据][{CL_RESET}]:"
+- Original: "[{CL_GREEN}][Status][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_GREEN}][状态][{CL_RESET}]:[{CL_CLL}]"
+- Original: "[{CL_MAGENTA}][SQL][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_MAGENTA}][数据][{CL_RESET}]:[{CL_CLL}]"
 - Original: "[{CL_PASS}]       [{CL_BT_WHITE}]            rAthena Development Team presents                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_PASS}]       [{CL_GREEN}]              http://rathena.org/board/                        [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
@@ -2120,20 +2120,20 @@ Body:
   Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %d | 角色编号: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
   Translation: "[{CL_RED}]请求删除指定角色 [{CL_GREEN}]账号编号: %u | 角色编号: %u[{CL_RESET}]\n"
-- Original: "[{CL_RED}][Error][{CL_RESET}]:"
-  Translation: "[{CL_RED}][错误][{CL_RESET}]:"
-- Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:"
-  Translation: "[{CL_RED}][致命][{CL_RESET}]:"
-- Original: "[{CL_WHITE}][Info][{CL_RESET}]:"
-  Translation: "[{CL_WHITE}][信息][{CL_RESET}]:"
-- Original: "[{CL_WHITE}][Notice][{CL_RESET}]:"
-  Translation: "[{CL_WHITE}][提示][{CL_RESET}]:"
+- Original: "[{CL_RED}][Error][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_RED}][错误][{CL_RESET}]:[{CL_CLL}]"
+- Original: "[{CL_RED}][Fatal Error][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_RED}][致命][{CL_RESET}]:[{CL_CLL}]"
+- Original: "[{CL_WHITE}][Info][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_WHITE}][信息][{CL_RESET}]:[{CL_CLL}]"
+- Original: "[{CL_WHITE}][Notice][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_WHITE}][提示][{CL_RESET}]:[{CL_CLL}]"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
   Translation: "正在连接日志数据库 [{CL_WHITE}]'%s'[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "[{CL_GREEN}]已成功连接[{CL_RESET}] 到日志数据库 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-- Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
-  Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:"
+- Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:[{CL_CLL}]"
+  Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:[{CL_CLL}]"
 - Original: "\\*"
   Translation: ""
 - Original: "_mmalloc: %[{PRIuPTR}]\n"
@@ -2546,6 +2546,14 @@ Body:
   Translation: ""
 - Original: "buildin_getequiptradability: Unknown equip index '%d'\n"
   Translation: ""
+- Original: "buildin_getexp2: Called with base and job exp 0.\n"
+  Translation: ""
+- Original: "buildin_getexp: Called with base and job exp 0.\n"
+  Translation: ""
+- Original: "buildin_getexp: Called with negative base exp.\n"
+  Translation: ""
+- Original: "buildin_getexp: Called with negative job exp.\n"
+  Translation: ""
 - Original: "buildin_getfreecell: variable '%s' for mapX is not a server variable, but no player is attached!"
   Translation: ""
 - Original: "buildin_getfreecell: variable '%s' for mapY is not a server variable, but no player is attached!"
@@ -2683,6 +2691,10 @@ Body:
 - Original: "buildin_guild_has_permission: Invalid permission '%d'.\n"
   Translation: ""
 - Original: "buildin_guild_has_permission: No permission given.\n"
+  Translation: ""
+- Original: "buildin_guildgetexp: Called for player %s (AID: %u, CID: %u) without a guild.\n"
+  Translation: ""
+- Original: "buildin_guildgetexp: Called with exp <= 0.\n"
   Translation: ""
 - Original: "buildin_guildopenstorage_log: This command requires PACKETVER 2014-02-05 or newer.\n"
   Translation: ""
@@ -3890,6 +3902,10 @@ Body:
   Translation: ""
 - Original: "map_setmapflag: Skill damage adjustment without casting type for map %s.\n"
   Translation: ""
+- Original: "map_setmapflag: The maximum ASPD cannot be greater than 199, and it has been forcibly set to 199.\n"
+  Translation: ""
+- Original: "map_setmapflag: The minimum ASPD cannot be less than 1, and it has been forcibly set to 1.\n"
+  Translation: ""
 - Original: "map_setmapflag: Unable to set BEXP and No Base EXP flags for the same map! Removing BEXP flag from %s.\n"
   Translation: ""
 - Original: "map_setmapflag: Unable to set Battleground and GvG flags for the same map! Removing Battleground flag from %s.\n"
@@ -4688,7 +4704,7 @@ Body:
   Translation: ""
 - Original: "sale_read_db_sql: Cannot process table '%s' at line '%d', skipping...\n"
   Translation: ""
-- Original: "sc_start: Item combo contains an INFINITE_TICK duration. Skipping bonus.\n"
+- Original: "sc_start: Item combo of item #%u contains an INFINITE_TICK duration. Skipping bonus.\n"
   Translation: ""
 - Original: "script debug : %d %d : %s\n"
   Translation: ""
@@ -4943,8 +4959,6 @@ Body:
 - Original: "skill_delunitgroup: group is NULL (source=%s:%d, %s)! Please report this! (#3504)\n"
   Translation: ""
 - Original: "skill_get_new_group_id: All ids are taken. Exiting..."
-  Translation: ""
-- Original: "skill_get_nounit_layout: unknown no-unit layout for skill %d (level %d)\n"
   Translation: ""
 - Original: "skill_get_unit_layout: unknown unit layout for skill %d (level %d)\n"
   Translation: ""
