--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -15,3 +15,4 @@ npc: npc/mynpc/2.轉職系統.txt
 npc: npc/mynpc/3.美容系統.txt
 npc: npc/mynpc/字串函數.txt
 npc: npc/mynpc/拍賣場.txt
+npc: npc/mynpc/battlerec_test_fix.txt
