增加 hide_server_ipaddress 选项, 可控制不主动返回服务器的 IP 地址给到客户端

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -6,6 +6,19 @@
 // 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
+// 是否不主动返回服务器的 IP 地址给到客户端?
+// 若您希望使用负载均衡或者反向代理等方式来提供服务,
+// 且希望能更好的隐藏真实服务器 IP 地址, 那么请启用此选项.
+//
+// 注意: 通常启用此选项需要客户端在 DIFF 的时候启用代理服务器支持选项
+// 在 NEMO 中选项的英文名为: Enable Proxy Support
+// 启用此选项后客户端将不会再听命服务端返回的服务器 IP 地址, 只会认定使用
+// clientinfo.xml 或 sclientinfo.xml 的地址与服务端进行连接
+//
+// 注意: 启用此选项将导致模拟器不支持多 IP 地图服务器架构,
+// 但依然能够支持同 IP 不同端口的地图服务器架构...
+hide_server_ipaddress: off
+
 // 是否记录内部通讯日志? 
 // 这个选项启用后当一个公会被创建、被解散、占领新城池时
 // 都会往 char_server_db 选项所指向的 interlog 表写入日志信息
@@ -118,13 +131,11 @@ mysql_reconnect_type: 2
 mysql_reconnect_count: 1
 
 // >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
-// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
 // 
 // 注意注意: 请不要改变接下来的这些设置,
 // 除非您对数据库非常的了解, 并且知道自己在做什么事情.
 // 若没有充分的理由建议您保持默认, 不要去修改他们.
 // 
-// >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
 // >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
 
 // 登录服务器的数据库表名配置
