--- a/conf/packet_athena.conf
+++ b/conf/packet_athena.conf
@@ -1,6 +1,11 @@
-﻿// Athena sockets Configuration file
-// translated (davidsiaw)
-
+﻿//--------------------------------------------------------------
+// 熊猫模拟器 - 套接字配置文件
+// 本配置文件由 davidsiaw 将其翻译成英文
+// 由熊猫模拟器开发团队翻译成中文并加以润色
+//--------------------------------------------------------------
+// 提示: 此配置文件中, 只要是以 // 作为开头的行, 都是注释信息. 
+// 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
+//--------------------------------------------------------------
 
 // Display debug reports (When something goes wrong during the report, the report is saved.)
 debug: no
@@ -21,54 +26,89 @@ debug: no
 // How long can a socket stall before closing the connection (in seconds)
 stall_time: 60
 
-//----- IP 规则设置 -----
-
-// 当有新的连接请求需要建立时, 是否先检查对方的IP地址
-// 这个选项打开时, 也会启用 DDoS 攻击防护机制.
+// 当有新的连接请求需要建立时, 是否先检查对方的 IP 地址是否符合规则?
+// 这个选项打开后会同时启用 DDoS 攻击防护机制.
 enable_ip_rules: yes
 
-// 检查IP地址是否合法的名单顺序
-//   deny,allow     : 先检查黑名单规则, 再检查白名单规则, 
-//                    如果IP地址没有在任何名单中出现, 则通过. 
-//   allow,deny     : 先检查白名单规则, 再检查黑名单规则, 
-//                    如果IP地址没有在任何名单中出现, 则通过. 
-//   mutual-failure : 要求IP地址必须白名单中, 
-//                    并且与此同时不在黑名单中, 才判定为通过. 
-// (默认值为 deny,allow 表示先检查黑名单规则, 再检查白名单规则)
-
+// 设置检查 IP 地址时的规则顺序
+//
+//   deny,allow     : 先黑后白, 即: 先检查黑名单规则, 再检查白名单规则.
+//                    如果 IP 地址没有在任何名单中出现, 则通过. 
+//   allow,deny     : 先白后黑, 即: 先检查白名单规则, 再检查黑名单规则.
+//                    如果 IP 地址没有在任何名单中出现, 则通过. 
+//   mutual-failure : 要求 IP 地址必须白名单中并且与此同时不在黑名单中,
+//                    才判定为通过. 
+// 
+// 默认值为: deny,allow (表示先黑后白)
 order: deny,allow
-// order: allow,deny
-// order: mutual-failure
 
-// IP 规则
-//   allow : 允许连接的IP范围(哪怕它被标记为DDoS的攻击者)
-//   deny  : 拒绝连接的IP范围
-// 程序在处理规则的时候, 优先使用匹配上IP地址的第一个设置
-
+//===================================
+// 白名单规则
+//===================================
+// allow : 允许连接的 IP 范围
+// 若来访的 IP 地址命中白名单, 那么就允许与它的连接
+// 若 IP 地址可以匹配上多个规则, 那么优先使用匹配上的第一条规则
+// 支持的 IP 地址范围格式有以下几种:
 // allow: 127.0.0.1
 // allow: 192.168.0.0/16
 // allow: 10.0.0.0/255.0.0.0
 // allow: all
 
+//===================================
+// 黑名单规则
+//===================================
+// deny  : 拒绝连接的 IP 范围
+// 若来访的 IP 地址命中黑名单, 那么就拒绝与它的连接
+// 若 IP 地址可以匹配上多个规则, 那么优先使用匹配上的第一条规则
+// 支持的 IP 地址范围格式有以下几种:
 // deny: 127.0.0.1
+// deny: 192.168.0.0/16
+// deny: 10.0.0.0/255.0.0.0
 
+//===================================
+// DDoS 攻击防护设置
+//===================================
+// 在 ddos_interval 选项指定的时间间隔内
+// 若某个 IP 地址建立连接超过了 ddos_count 指定的次数,
+// 那么将此 IP 视为发起了 DDoS 攻击, 并且在 ddos_autoreset 毫秒内禁止它再次连接
 
-//---- DDoS 攻击防护设置 ----
-// 如果在 ddos_interval 选项指定的时间间隔内, 某个IP地址建立连接的次数
-// 超过了 ddos_count 选项指定的次数, 那么将这个IP视为发起了DDoS攻击
-
-// 连续尝试建立连接的间隔时间 (单位为毫秒)
-// (默认值为 3000 毫秒, 即3秒)
+// 连续尝试建立连接的间隔时间 (单位: 毫秒)
+// 默认值为: 3000 毫秒
 ddos_interval: 3000
 
 // 连续尝试建立连接的次数
-// (默认值为 5 次)
+// 默认值为: 5 次
 ddos_count: 5
 
-// 当某个IP地址被判定为发起DDoS攻击之后, 
-// 需要过多长时间(单位为毫秒)才解除这个IP的连接限制
-// (默认值为 600000 毫秒, 即10分钟)
+// 当某个 IP 地址被判定为发起 DDoS 攻击之后, 
+// 需要过多长时间 (单位: 毫秒) 才允许这个 IP 重新与我们建立连接
+// 默认值为: 600000 毫秒 (即 10 分钟)
 ddos_autoreset: 600000
+
+//===================================
+// 针对负载均衡健康监控的设置
+//===================================
+// 该组选项必须启用 enable_ip_rules 才会发生作用.
+// 
+// 使负载均衡的健康监控 IP 建立/关闭的连接信息不再显示到终端
+// 启用后被 health 规则命中的这些 IP 地址, 都将具备:
+//   - 它们的连接将会被无条件接受
+//   - 它们关闭连接的时候终端将不会显示出提示信息
+//   - 它们发起高频的连接请求将不会被判定为 DDoS 攻击
+// 默认值为: 是
+make_hm_silent: yes
+
+// 阿里云的负载均衡业务 (CLB/SLB) 会对端口进行健康监控
+// 根据 https://help.aliyun.com/document_detail/55205.html 中的信息
+// 以下是进行健康监控的探针服务器地址, 熊猫模拟器默认将其加入白名单
+health: 100.64.0.0/10
+
+// Google Cloud 的网络负载平衡业务会对端口进行健康监控
+// 根据 https://cloud.google.com/load-balancing/docs/health-check-concepts#ip-ranges 中的信息
+// 以下是进行健康监控的探针服务器地址, 熊猫模拟器默认将其加入白名单
+health: 35.191.0.0/16
+health: 209.85.152.0/22
+health: 209.85.204.0/22
 
 
 import: conf/import/packet_conf.txt
