--- a/conf/subnet_athena.conf
+++ b/conf/subnet_athena.conf
@@ -1,12 +1,21 @@
 ﻿//--------------------------------------------------------------
-// 子网掩码配置文件
+// 熊猫模拟器 - 子网划分配置文件
+// 由熊猫模拟器开发团队翻译成中文并加以润色
 //--------------------------------------------------------------
 //
 // 数据库格式说明:
-// subnet: 子网掩码:角色服务器IP地址:地图服务器IP地址
+// subnet: 子网掩码:角色服务器 IP 地址:地图服务器 IP 地址
 // 
 // 你可以在此添加更多的子网设置, 最多支持16条
-// 当 ((角色服务器IP地址 & 子网掩码 ) == (客户端的IP地址 & 子网掩码)) 匹配通过时
-// 客户端将会连接到规则指定的地图服务器IP地址
+// 
+// 当客户端与登录服务器建立连接且账号验证通过后
+// 如果 (客户端 IP 地址 & 子网掩码) == (此处规则设置的角色服务器 IP 地址 & 子网掩码) 成立
+// 那么将使用此处规则设置的角色服务器 IP 地址返回给客户端
+// 若不匹配任何一条子网规则, 则将使用 char_athena.conf 中配置的 char_ip 返回给客户端
+// 
+// 当客户端完成角色选择之后
+// 如果 (客户端 IP 地址 & 子网掩码) == (此处规则设置的角色服务器 IP 地址 & 子网掩码) 成立
+// 那么将使用此处规则设置的地图服务器 IP 地址返回给客户端
+// 若不匹配任何一条子网规则, 则将使用 map_athena.conf 中配置的 map_ip 返回给客户端
 
 subnet: 255.0.0.0:127.0.0.1:127.0.0.1
