--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -3355,6 +3355,8 @@ Body:
 - Original: "connect_check: Connection from %d.%d.%d.%d %s\n"
   Translation: ""
 - Original: "connect_check: DDoS Attack detected from %d.%d.%d.%d!\n"
+  Translation: "connect_check: 发现 %d.%d.%d.%d 短时间内频繁请求连接, 已将其判定为 DDoS 攻击!\n"
+- Original: "connect_check: Found match from %s list:%d.%d.%d.%d IP:%d.%d.%d.%d Mask:%d.%d.%d.%d\n"
   Translation: ""
 - Original: "connect_check: Found match from allow list:%d.%d.%d.%d IP:%d.%d.%d.%d Mask:%d.%d.%d.%d\n"
   Translation: ""
