--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -834,8 +834,6 @@ Body:
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 個分組, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-- Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' levels in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' pets in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: ""
 - Original: "Done reading '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -867,6 +865,8 @@ Body:
 - Original: "Elemental data save failure\n"
   Translation: ""
 - Original: "Elemental loaded (ID: %d / Class: %d / CID: %d).\n"
+  Translation: ""
+- Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
   Translation: ""
@@ -909,6 +909,8 @@ Body:
 - Original: "Failed to initialize mapcache data (%s)..\n"
   Translation: ""
 - Original: "Failed to read %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
+- Original: "Failed to remove %s, the monster doesn't exist in group %s.\n"
   Translation: ""
 - Original: "Failed to save inventory/cart/storage data (AID: %d, type: %d).\n"
   Translation: ""
@@ -1030,6 +1032,8 @@ Body:
   Translation: "已刪除人工生命體. (生命體編號: %d)\n"
 - Original: "Homunculus data delete failure\n"
   Translation: "人工生命體資料刪除失敗.\n"
+- Original: "Homunculus level %d exceeds maximum level %d, skipping.\n"
+  Translation: ""
 - Original: "Homunculus loaded (ID: %d - %s / Class: %d / CID: %d).\n"
   Translation: "已載入人工生命體資訊 (生命體編號: %d - 名稱: %s / 型別: %d / 歸屬角色編號: %d).\n"
 - Original: "IP Sync in progress...\n"
@@ -1078,6 +1082,8 @@ Body:
   Translation: ""
 - Original: "Invalid channel type %s at '%s' line '%d'! Skipping...\n"
   Translation: ""
+- Original: "Invalid chat ID '%d' in line %d\n"
+  Translation: ""
 - Original: "Invalid class upper %s, defaulting to All.\n"
   Translation: ""
 - Original: "Invalid client hash (account: %s, sent md5: %s, ip: %s)\n"
@@ -1121,6 +1127,8 @@ Body:
 - Original: "Invalid monster element %s, defaulting to ELE_NEUTRAL.\n"
   Translation: ""
 - Original: "Invalid monster element level %hu, defaulting to 1.\n"
+  Translation: ""
+- Original: "Invalid monster group %s.\n"
   Translation: ""
 - Original: "Invalid monster magic defense %d, capping...\n"
   Translation: ""
@@ -1392,6 +1400,10 @@ Body:
   Translation: "編號為 #%d 的訊息無法從%.0s \"%s\" 中被找到.\n"
 - Original: "Message #%d not found for langtype %d.\n"
   Translation: "編號為 #%d 的訊息無法從當前的語言型別中被找到 (語言型別: %d).\n"
+- Original: "Message too long!\n"
+  Translation: ""
+- Original: "Message too long! Line %d, id: %d\n"
+  Translation: ""
 - Original: "Messages file not found: %s\n"
   Translation: "無法找到訊息資料庫檔案: %s\n"
 - Original: "MinValue %d is greater than MaxValue %d, setting MaxValue to MinValue + 1.\n"
@@ -1830,10 +1842,14 @@ Body:
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋它? 這是最後一次確認. (Y/N)\n"
+- Original: "The group %s must start with 'MOBG_'.\n"
+  Translation: ""
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
+- Original: "The minimum level is 1.\n"
+  Translation: ""
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
@@ -1911,6 +1927,8 @@ Body:
 - Original: "Unknown item ID %hu in MobItem Fixed Ratio Database.\n"
   Translation: ""
 - Original: "Unknown mob %s.\n"
+  Translation: ""
+- Original: "Unknown mob id %d for group %s.\n"
   Translation: ""
 - Original: "Unknown mob sprite constant %s.\n"
   Translation: ""
@@ -3974,21 +3992,13 @@ Body:
   Translation: ""
 - Original: "mob_delayspawn: Timer mismatch: %d != %d\n"
   Translation: ""
+- Original: "mob_get_random_id: Default monster is not defined for type %d.\n"
+  Translation: ""
 - Original: "mob_get_random_id: Invalid type (%d) of random monster.\n"
   Translation: ""
 - Original: "mob_get_random_id: Random monster type %d is not defined.\n"
   Translation: ""
-- Original: "mob_get_random_id: no suitable monster found, use fallback for given list. Last_MobID: %d\n"
-  Translation: ""
 - Original: "mob_guardian_guildchange: New Guild (id %d) does not exists!\n"
-  Translation: ""
-- Original: "mob_parse_row_chatdb: Empty message for id %d.\n"
-  Translation: ""
-- Original: "mob_parse_row_chatdb: Invalid chat ID '%d' in line %d\n"
-  Translation: ""
-- Original: "mob_parse_row_chatdb: Memory allocation for chat ID '%d' failed.\n"
-  Translation: ""
-- Original: "mob_parse_row_chatdb: Message too long! Line %d, id: %d\n"
   Translation: ""
 - Original: "mob_parse_row_mobskilldb: Invalid Skill ID (%d) for all mobs\n"
   Translation: ""
@@ -3997,6 +4007,8 @@ Body:
 - Original: "mob_parse_row_mobskilldb: Non existant Mob id %d\n"
   Translation: ""
 - Original: "mob_parse_row_mobskilldb: Too many skills for monster %d[%s]\n"
+  Translation: ""
+- Original: "mob_parse_row_mobskilldb: Unknown chat ID %s for monster %d.\n"
   Translation: ""
 - Original: "mob_parse_row_mobskilldb: Unrecognized condition 1 %s for %d\n"
   Translation: ""
@@ -4012,8 +4024,6 @@ Body:
   Translation: "mob_readdb_drop: 無效的物品編號 %s, 請確認是否已定義此物品.\n"
 - Original: "mob_readdb_drop: Unknown mob ID %s.\n"
   Translation: ""
-- Original: "mob_readdb_group: Invalid random monster group '%s'\n"
-  Translation: "mob_readdb_group: 無效的隨機魔物分組: '%s'\n"
 - Original: "mob_readdb_itemratio: Invalid item id %u.\n"
   Translation: ""
 - Original: "mob_readdb_itemratio: Invalid monster with ID %hu (Item:%u Col:%d).\n"
@@ -4665,10 +4675,6 @@ Body:
 - Original: "read_elementaldb_sub: Elemental %d has invalid element level %d (max is %d)\n"
   Translation: ""
 - Original: "read_elementaldb_sub: Elemental %d has invalid element type %d (max element is %d)\n"
-  Translation: ""
-- Original: "read_homunculus_expdb: Can't read %s\n"
-  Translation: ""
-- Original: "read_homunculus_expdb: Reached max level in %s [%d]. Remaining lines were not read.\n "
   Translation: ""
 - Original: "read_homunculus_skilldb: Invalid Homunculus skill '%s'.\n"
   Translation: ""
