--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -2524,6 +2524,12 @@ Body:
   Translation: ""
 - Original: "buildin_equipidx: Invalid Item ID (%u).\n"
   Translation: ""
+- Original: "buildin_expandinventory_ack: The ack param should be in range 0-%d, currently type is: %d.\n"
+  Translation: ""
+- Original: "buildin_expandinventory_ack: The itemId '%d' is not exists.\n"
+  Translation: ""
+- Original: "buildin_expandinventory_result: The result param should be in range 0-%d, currently type is: %d.\n"
+  Translation: ""
 - Original: "buildin_failedrefitem: No item equipped at pos %d (CID=%d/AID=%d).\n"
   Translation: ""
 - Original: "buildin_getareadropitem: Unknown item %s\n"
@@ -3293,6 +3299,12 @@ Body:
 - Original: "clif_parse_bg_queue_cancel_request: Player trying to request leaving non-existent queue with name: %s (AID:%d CID:%d).\n"
   Translation: ""
 - Original: "clif_parse_configuration: received unknown configuration type '%d'...\n"
+  Translation: ""
+- Original: "clif_parse_inventoryExpansion: event '%s' not found, operation failed.\n"
+  Translation: ""
+- Original: "clif_parse_inventoryExpansionConfirmed: event '%s' not found, operation failed.\n"
+  Translation: ""
+- Original: "clif_parse_inventoryExpansionRejected: event '%s' not found, operation failed.\n"
   Translation: ""
 - Original: "clif_party_message: Truncated message '%s' (len=%d, max=%[{PRIuPTR}], party_id=%d).\n"
   Translation: ""
