--- a/npc/pre-re/scripts_main.conf
+++ b/npc/pre-re/scripts_main.conf
@@ -33,6 +33,9 @@ import: npc/scripts_mapflags.conf
 import: npc/scripts_monsters.conf
 import: npc/scripts_warps.conf
 
+// ------------------- Pandas Feature Script --------------------
+import: npc/scripts_features.conf
+
 // ----------------- Pre-Renewal Script Files -------------------
 import: npc/pre-re/scripts_athena.conf
 import: npc/pre-re/scripts_jobs.conf
