--- a/npc/re/scripts_main.conf
+++ b/npc/re/scripts_main.conf
@@ -33,6 +33,9 @@ import: npc/scripts_mapflags.conf
 import: npc/scripts_monsters.conf
 import: npc/scripts_warps.conf
 
+// ------------------- Pandas Feature Script --------------------
+import: npc/scripts_features.conf
+
 // ------------------- Renewal Script Files ---------------------
 import: npc/re/scripts_athena.conf
 import: npc/re/scripts_guild.conf
