修正一些 LGTM 给出的警告信息

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,5 +1,6 @@
 queries:
   - exclude: cpp/potentially-dangerous-function
+  - exclude: cpp/constant-comparison
 extraction:
   cpp:
     after_prepare:
