修正中文消息文件中的格式化标记错误 (解决 @itemlist 会导致崩溃的问题)

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -93,14 +93,14 @@
 75: 公会战还没开始
 76: 您已学会了所有技能
 77: 委托 '%s' (名字:  编号):
-78: - %s: %d
+78: - %s: %u
 79: 正在 %d 的事件上
 80: 请输入一个显示名称及魔物名称/编号
 81: 您的 GM 等级并没有权限在该玩家上执行这个命令
 82: 请使用下列号码/名称:
 83: 无法产生华丽金属
 84: 所有属性提升到最大
-85: 不合法的时间 %d 或已取消的指令 %s
+85: 执行 %s 指令时给予的时间不合法 (时间 = %d)
 86: 抱歉, 角色名称必须大于 4 个字符
 87: 抱歉, 角色名称必须小于 23 个字符
 88: 正在向 %s 服务器发送请求
@@ -182,7 +182,7 @@
 166: 没有道具被精练
 167: 1 个道具已被精练
 168: %d 个道具已被精练
-169: 此物品(%hu: '%s')不是装备
+169: 此物品(%u: '%s')不是装备
 170: 此物品不是装备
 171: %d - 无
 //172: 取代了您前一个传送点 %d - %s (%d, %d)
@@ -395,7 +395,7 @@
 371:  -- 决斗: %d/%d, 会员: %d/%d --
 372:  -- 决斗创建以后 (使用 @invite/@leave) --
 373:  -- 玩家 %s 邀请 %s 参加决斗 --
-374: 悲哀 -- 有人想和你决斗 (请使用 @accept 接受邀请或者使用 @reject 拒绝邀请) --
+374: 悲哀 -- 玩家 %s 想和你决斗 (请使用 @accept 接受邀请或者使用 @reject 拒绝邀请) --
 375:  <- 玩家 %s 已经离开决斗 --
 376:  -> 玩家 %s 已经接受决斗 --
 377:  -- 玩家 %s 已经拒绝决斗 --
@@ -554,7 +554,7 @@
 
 // Trade Spoof Messages
 538: 尝试使用交易复制: 玩家 '%s' (账户: %d) 尝试交易复制
-539: 这个使用者有 %d 个物品 (物品id: %hu), 尝试交易 %d 个
+539: 这个使用者有 %d 个物品 (物品id: %u), 尝试交易 %d 个
 540: 这个使用者已经被伺服器屏蔽
 
 // Rare Items Drop/Steal announce
@@ -742,14 +742,14 @@
 707: 您目前VIP使用到期日为: %s
 708: 此玩家目前VIP使用到期日为: %s
 
-709: 物品 %hu 已经在您的背包内删除.
-710: 物品 %hu 已经在您的手推车内删除.
-711: 物品 %hu 已经在您的仓库内删除.
+709: 物品 %u 已经在您的背包内删除.
+710: 物品 %u 已经在您的手推车内删除.
+711: 物品 %u 已经在您的仓库内删除.
 
 // Item shop
-712: 您没有足够的 %s (%hu) 可以完成交易.
+712: 您没有足够的 %s (%u) 可以完成交易.
 713: 您没有足够的 '%s' 可以完成交易.
-714: 此商店使用 %s (%hu) 作为交易货币
+714: 此商店使用 %s (%u) 作为交易货币
 715: 此商店使用 '%s' 作为交易货币
 716: 您的 '%s' 余额为: %d
 
@@ -1238,9 +1238,9 @@
 1189: 没有找到指定物品。
 1190: 您已经自动拾取此物品。
 1191: 您的自动拾取清单已满，请移除一些项目 @autolootid -<物品名称/ID>。
-1192: 自动拾取物品： '%s'/'%s' {%hu}
+1192: 自动拾取物品： '%s'/'%s' {%u}
 1193: 您当前没有自动拾取此物品。
-1194: 从自动拾取清单中移除： '%s'/'%s' {%hu} 。
+1194: 从自动拾取清单中移除： '%s'/'%s' {%u} 。
 1195: 自动拾取物品清单上限为 %d 条。
 1196: 添加拾取物品到清单中, 使用方法 "@alootid +<物品名称/ID>"； 移除物品, 使用方式 "@alootid -<物品名称/ID>".
 1197: "@alootid reset" 将重置您的自动捡拾取清单
@@ -1389,7 +1389,7 @@
 
 // @iteminfo
 1276: 请输入物品名称或ID (使用方法: @ii/@iteminfo <物品名称/ID>).
-1277: 物品: '%s'/'%s'[%d] (%hu) 类型: %s | 额外效果: %s
+1277: 物品: '%s'/'%s'[%d] (%u) 类型: %s | 额外效果: %s
 1278: 无
 1279: With script
 1280: NPC 买:%dz, 卖:%dz | 重量: %.1f
@@ -1399,7 +1399,7 @@
 
 // @whodrops
 1284: 请输入物品名称/ID (使用方法: @whodrops <物品名称/ID>).
-1285: 物品: '%s'[%d] (ID:%hu)
+1285: 物品: '%s'[%d] (ID:%u)
 1286:  - 无魔物掉落此物品.
 1287:  - 普通魔物最高掉率 (仅列出最高掉率%d):
 
@@ -1513,7 +1513,7 @@
 1351:  -> (创造物品, 创造者 id: %u)
 1352:  -> (卡片: 
 1353: 没有找到物品 %s.
-1354: %d 发现 %d  项物品 在 %d %s slots.
+1354: 发现 %d  项物品 在 %d %s slots.
 
 // @delitem
 1355: 请输入物品名称/ID、数量和角色名 (使用方法: #delitem <角色名> <物品名称/ID> <数量>).
