--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -93,14 +93,14 @@
 75: 公會戰還沒開始
 76: 您已學會了所有技能
 77: 委託 '%s' (名字:  編號):
-78: - %s: %d
+78: - %s: %u
 79: 正在 %d 的事件上
 80: 請輸入一個顯示名稱及魔物名稱/編號
 81: 您的 GM 等級並沒有權限在該玩家上執行這個命令
 82: 請使用下列號碼/名稱:
 83: 無法產生華麗金屬
 84: 所有屬性提升到最大
-85: 不合法的時間 %d 或已取消的指令 %s
+85: 執行 %s 指令時給予的時間不合法 (時間 = %d)
 86: 抱歉, 角色名稱必須大於 4 個字符
 87: 抱歉, 角色名稱必須小於 23 個字符
 88: 正在向 %s 服務器發送請求
@@ -182,7 +182,7 @@
 166: 沒有道具被精練
 167: 1 個道具已被精練
 168: %d 個道具已被精練
-169: 此物品(%hu: '%s')不是裝備
+169: 此物品(%u: '%s')不是裝備
 170: 此物品不是裝備
 171: %d - 無
 //172: 取代了您前一個傳送點 %d - %s (%d, %d)
@@ -395,7 +395,7 @@
 371:  -- 決鬥: %d/%d, 會員: %d/%d --
 372:  -- 決鬥創建以後 (使用 @invite/@leave) --
 373:  -- 玩家 %s 邀請 %s 參加決鬥 --
-374: 悲哀 -- 有人想和你決鬥 (請使用 @accept 接受邀請或者使用 @reject 拒絕邀請) --
+374: 悲哀 -- 玩家 %s 想和你決鬥 (請使用 @accept 接受邀請或者使用 @reject 拒絕邀請) --
 375:  <- 玩家 %s 已經離開決鬥 --
 376:  -> 玩家 %s 已經接受決鬥 --
 377:  -- 玩家 %s 已經拒絕決鬥 --
@@ -554,7 +554,7 @@
 
 // Trade Spoof Messages
 538: 嘗試使用交易複製: 玩家 '%s' (賬戶: %d) 嘗試交易複製
-539: 這個使用者有 %d 個物品 (物品id: %hu), 嘗試交易 %d 個
+539: 這個使用者有 %d 個物品 (物品id: %u), 嘗試交易 %d 個
 540: 這個使用者已經被伺服器屏蔽
 
 // Rare Items Drop/Steal announce
@@ -742,14 +742,14 @@
 707: 您目前VIP使用到期日為: %s
 708: 此玩家目前VIP使用到期日為: %s
 
-709: 物品 %hu 已經在您的背包內刪除.
-710: 物品 %hu 已經在您的手推車內刪除.
-711: 物品 %hu 已經在您的倉庫內刪除.
+709: 物品 %u 已經在您的背包內刪除.
+710: 物品 %u 已經在您的手推車內刪除.
+711: 物品 %u 已經在您的倉庫內刪除.
 
 // Item shop
-712: 您沒有足夠的 %s (%hu) 可以完成交易.
+712: 您沒有足夠的 %s (%u) 可以完成交易.
 713: 您沒有足夠的 '%s' 可以完成交易.
-714: 此商店使用 %s (%hu) 作為交易貨幣
+714: 此商店使用 %s (%u) 作為交易貨幣
 715: 此商店使用 '%s' 作為交易貨幣
 716: 您的 '%s' 餘額為: %d
 
@@ -1047,8 +1047,8 @@
 1031: 請輸入物品關鍵字(使用方法: @idsearch <物品關鍵字>).
 
 // @recallall / @guildrecall / @partyrecall
-1032: 您無權召喚某些人到當前地圖。
-1033: 您無權從某些地圖進行召喚，%d個玩家沒有被召喚。
+1032: 您無法將玩家召喚到當前地圖.
+1033: 有 %d 位玩家當前正在擺攤, 無法被召喚.
 
 // @guildrecall
 1034: 請輸入工會名稱或ID(使用方法: @guildrecall <公會名稱/ID>).
@@ -1238,9 +1238,9 @@
 1189: 沒有找到指定物品。
 1190: 您已經自動拾取此物品。
 1191: 您的自動拾取清單已滿，請移除一些項目 @autolootid -<物品名稱/ID>。
-1192: 自動拾取物品： '%s'/'%s' {%hu}
+1192: 自動拾取物品： '%s'/'%s' {%u}
 1193: 您當前沒有自動拾取此物品。
-1194: 從自動拾取清單中移除： '%s'/'%s' {%hu} 。
+1194: 從自動拾取清單中移除： '%s'/'%s' {%u} 。
 1195: 自動拾取物品清單上限為 %d 條。
 1196: 添加拾取物品到清單中, 使用方法 "@alootid +<物品名稱/ID>"； 移除物品, 使用方式 "@alootid -<物品名稱/ID>".
 1197: "@alootid reset" 將重置您的自動撿拾取清單
@@ -1389,7 +1389,7 @@
 
 // @iteminfo
 1276: 請輸入物品名稱或ID (使用方法: @ii/@iteminfo <物品名稱/ID>).
-1277: 物品: '%s'/'%s'[%d] (%hu) 類型: %s | 額外效果: %s
+1277: 物品: '%s'/'%s'[%d] (%u) 類型: %s | 額外效果: %s
 1278: 無
 1279: With script
 1280: NPC 買:%dz, 賣:%dz | 重量: %.1f
@@ -1399,7 +1399,7 @@
 
 // @whodrops
 1284: 請輸入物品名稱/ID (使用方法: @whodrops <物品名稱/ID>).
-1285: 物品: '%s'[%d] (ID:%hu)
+1285: 物品: '%s'[%d] (ID:%u)
 1286:  - 無魔物掉落此物品.
 1287:  - 普通魔物最高掉率 (僅列出最高掉率%d):
 
@@ -1513,7 +1513,7 @@
 1351:  -> (創造物品, 創造者 id: %u)
 1352:  -> (卡片: 
 1353: 沒有找到物品 %s.
-1354: %d 發現 %d  項物品 在 %d %s slots.
+1354: 發現 %d  項物品 在 %d %s slots.
 
 // @delitem
 1355: 請輸入物品名稱/ID、數量和角色名 (使用方法: #delitem <角色名> <物品名稱/ID> <數量>).
