客户端版本不满足需求时不直接移除脚本指令

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -2040,6 +2040,10 @@ Body:
   Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
+- Original: "Wrong inventorySize field: %d. Must be in range 1 to %d. Character %s (CID: %d, AID: %d)\n"
+  Translation: ""
+- Original: "Wrong inventory_size field: %d. Must be in range 1 to %d. Character %s (CID: %d, AID: %d)\n"
+  Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
   Translation: "您正在使用管理員身份執行熊貓模擬器, 但我們並不需要如此高的許可權.\n"
 - Original: "You are running rAthena with root privileges, it is not necessary.\n"
@@ -2528,7 +2532,13 @@ Body:
   Translation: ""
 - Original: "buildin_expandinventory_ack: The itemId '%d' is not exists.\n"
   Translation: ""
+- Original: "buildin_expandinventory_ack: This command requires PACKETVER 2018-12-19 or newer.\n"
+  Translation: ""
+- Original: "buildin_expandinventory_adjust: This command requires PACKETVER 2018-12-19 or newer.\n"
+  Translation: ""
 - Original: "buildin_expandinventory_result: The result param should be in range 0-%d, currently type is: %d.\n"
+  Translation: ""
+- Original: "buildin_expandinventory_result: This command requires PACKETVER 2018-12-19 or newer.\n"
   Translation: ""
 - Original: "buildin_failedrefitem: No item equipped at pos %d (CID=%d/AID=%d).\n"
   Translation: ""
@@ -3189,6 +3199,8 @@ Body:
 - Original: "channel_delete: Channel name '%s' is invalid.\n"
   Translation: ""
 - Original: "char : A tables is missing in sql-server, please fix it, see (sql-files main.sql for structure) \n"
+  Translation: ""
+- Original: "char_inventory_max: Load character data failed (CID: %d), defaulting to MAX_INVENTORY.\n"
   Translation: ""
 - Original: "chat_createnpcchat: npc '%s' already has a chatroom, cannot create new one!\n"
   Translation: ""
