缓解魔物死亡但客户端没移除魔物单位的问题

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -297,4 +297,56 @@ always_trigger_mvp_killevent: 1
 // 默认值为: 542 (魔物 + 宠物 + 生命体 + 佣兵 + 元素精灵)
 batrec_autoenabled_unit: 542
 
+// 重发魔物死亡封包的间隔时间 (单位: 毫秒)
+// 用于解决视野范围内的怪物被近距离打死后, 客户端没有把它移除的这种情况.
+//
+// 该选项是 "缓解魔物死亡但客户端没移除魔物单位的问题" 的一部分.
+// 
+// 魔物死亡后会发送 clif_clearunit_area 的 CLR_DEAD 封包给客户端
+// 但是由于复杂网络结构 (比如: 使用了转发\盾机\负载均衡) 可能没有全链路开启 TCP_NODELAY
+// 会导致这个小封包粘在上一个封包中发出, 导致客户端无法正常收到和解析这个小封包.
+// 最后导致客户端无法移除掉这个死亡的魔物 (客户端收不到服务端的移除信号)
+// 
+// 启用此选项后, 将在第一个魔物死亡封包发送之后等待指定的时间间隔, 
+// 由服务端二次补发一个魔物死亡的封包给客户端. 
+// 但代价是每个魔物死亡都需要额外发送一个封包, 会加大网络开销, 请根据网络环境酌情开启.
+// 
+// 注意: 取值不能太大 (间隔不能太久), 否则一方面没意义,
+// 另外一方面如果魔物由于其他机制用相同的 GameID 复活则会导致它被错误的移除.
+//
+// 填写 0 表示不启用魔物死亡封包重发; 最大值为 1000 毫秒
+// 开启的话, 建议可以从 16 毫秒开始, 每次增加 16 毫秒然后尝试一下效果
+// 
+// 默认值为: 0 (表示不开启)
+repeat_clearunit_interval: 0
+
+// 魔物死亡封包将会发送给周围多少个格的玩家
+// 用于解决视野范围边缘的怪物被击退技能打死后, 客户端没有把它移除的这种情况.
+//
+// 该选项是 "缓解魔物死亡但客户端没移除魔物单位的问题" 的一部分.
+//
+// 部分技能会击退魔物, 比如当你召唤 100 个波利，将视野用鼠标滚轮放大,
+// 然后用暴风雪打距离屏幕边缘的怪物. 技能读条完毕后立刻往反方向移动 (提前 @speed 1)
+// 等暴风雪结束后回来观看, 较大概率会有魔物死亡但没被移除.
+// 
+// 造成这一现象的原因是:
+// 当魔物死亡的时候, 死亡封包会发送给周围 AREA_SIZE 格子的其他单位, 
+// 但如果你跑得太远(或者魔物被击退的太远), 那么封包发送的时候你已经不在接收范围内了.
+// 而类似暴风雪这样的技能带延迟伤害和击退, 
+// 再加上第一只波利死亡后掉落的物品会吸引其他波利靠近暴风雪的伤害区,
+// 就非常容易触发这一现象.
+// 
+// 启用此选项后, 在魔物死亡时将会往周围一个更大范围的区域发送死亡封包,
+// 确保玩家通常都能够在覆盖范围内.
+// 
+// 注意: AREA_SIZE 对应 conf/battle/client.conf 的 area_size 选项,
+// 但 area_size 选项控制的内容不止封包发送范围, 还包括了玩家移动的时候服务端
+// 会将玩家周围多少格范围内的游戏单位(NPC、魔物、其他玩家) 发送给客户端.
+// 因此我们不推荐通过调整它来缓解此问题, 否则可能会增加更多的网络开销.
+//
+// 默认值为: 28
+// 设为 0 则表示使用两倍 AREA_SIZE 的值.
+// 此选项的最大值是 200
+dead_area_size: 28
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
