使程序启动时能显示编译时确定的工作模式

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1546,8 +1546,8 @@ Body:
   Translation: ""
 - Original: "Packet debug of 0x%04X (length %d), session #%d\n"
   Translation: ""
-- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
-  Translation: "熊猫模拟器版本: [{CL_WHITE}]%s[{CL_RESET}]\n"
+- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}] (Mode: %s)\n"
+  Translation: "当前版本: [{CL_WHITE}]%s[{CL_RESET}] (工作模式: %s)\n"
 - Original: "Party Saved (%d - %s)\n"
   Translation: "已保存队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
@@ -1838,6 +1838,8 @@ Body:
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d).\n\n"
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
+- Original: "The client hash length is incorrect (hash: %s), skipping it...\n"
+  Translation: "配置的客户端哈希指纹长度不正确 (Hash: %s), 跳过...\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "内部通讯账号密码通常设置在 map_athena.conf 和 char_athena.conf 文件中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
