--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1546,8 +1546,8 @@ Body:
   Translation: ""
 - Original: "Packet debug of 0x%04X (length %d), session #%d\n"
   Translation: ""
-- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}]\n"
-  Translation: "熊貓模擬器版本: [{CL_WHITE}]%s[{CL_RESET}]\n"
+- Original: "Pandas Version: [{CL_WHITE}]%s[{CL_RESET}] (Mode: %s)\n"
+  Translation: "當前版本: [{CL_WHITE}]%s[{CL_RESET}] (工作模式: %s)\n"
 - Original: "Party Saved (%d - %s)\n"
   Translation: "已儲存隊伍資訊 (隊伍編號: %d - 隊伍名稱: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
@@ -1838,6 +1838,8 @@ Body:
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d).\n\n"
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
+- Original: "The client hash length is incorrect (hash: %s), skipping it...\n"
+  Translation: "配置的客戶端雜湊指紋長度不正確 (Hash: %s), 跳過...\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
