调整 item_properties.yml 以匹配正确的 YAML 配置风格 (#379)
- 以前 item_properties 中的设置项使用的按位运算值不直观，改成布尔值
- 修正 InvisibleWhenISee 和 InvisibleWhenTheySee 选项会导致地图服务器崩溃的问题
- 将 item_properties 中指定的物品附加数据从疾风缓存中移除（因为没必要）
- 修正避免物品被玩家使用而消耗相关选项无法正常工作的问题

感谢 Hongshin 测试

--- a/db/item_properties.yml
+++ b/db/item_properties.yml
@@ -3,11 +3,17 @@
 ###########################################################################
 #
 #  - ItemID                      想进行特殊设置的道具编号
-#    Property                    可选节点, 用来标出物品有什么特殊属性
-#    ControlViewID:              可选节点, 控制是否需要处理隐藏此道具的外观编号
-#      InvisibleWhenISee         可选节点, 当我自己在装备面板中查看装备时, 隐藏外观
-#      InvisibleWhenTheySee      可选节点, 当其他人查看我的装备时, 隐藏外观
-#    AnnouceRules                可选节点, 控制物品掉落时的特殊公告时机
+#    Property:
+#      AvoidConsumeForUse        避免物品被玩家主动从背包或快捷栏使用而消耗
+#      AvoidConsumeForSkill      避免物品被作为发动技能的必要道具而消耗
+#      IsAmuletItem              表示此物品是一个护身符类型的道具
+#    ControlViewID:
+#      InvisibleWhenISee         当我自己在装备面板中查看装备时隐藏外观
+#      InvisibleWhenTheySee      当其他人查看我的装备时隐藏外观
+#    AnnouceRules:
+#      DropToGround:             当打死魔物死亡后将道具掉落到地上时公告
+#      DropToInventoryForMVP:    当打死魔物掉落 MVP 道具到玩家背包时公告
+#      StealToInventory:         使用"偷窃"技能从魔物身上偷到此物品时公告
 #
 ###########################################################################
 #
@@ -25,15 +31,26 @@
 ###########################################################################
 #
 #   Property
-#   可选节点, 值为数值类型, 属于 ItemID 的子节点
-#   用来标出物品有什么特殊属性
-#  
-#   &1 - 表示避免物品被玩家主动使用而消耗
-#   &2 - 避免物品被作为发动技能的必要道具而消耗
-#   &4 - 表示此物品是一个护身符类型的道具
-#  
-#   这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
+#   可选节点, 列表, 属于 ItemID 的子节点
+#   该节点中的选项用于标出物品有什么特殊属性或者是作用
 #
+###########################################################################
+#  
+#     AvoidConsumeForUse
+#     可选节点, 值为布尔型, 属于 Property 的子节点
+#     若设置为 true 表示: 避免物品被玩家主动从背包或快捷栏使用而消耗
+#     没有此字段, 或设为 false 表示: 会被玩家主动从背包或快捷栏使用而消耗
+#  
+#     AvoidConsumeForSkill
+#     可选节点, 值为布尔型, 属于 Property 的子节点
+#     若设置为 true 表示: 避免物品被作为发动技能的必要道具而消耗
+#     没有此字段, 或设为 false 表示: 会被当做发动技能的必要道具而消耗
+#  
+#     IsAmuletItem
+#     可选节点, 值为布尔型, 属于 Property 的子节点
+#     若设置为 true 表示: 此物品是一个护身符类型的道具
+#     没有此字段, 或设为 false 表示: 不是护身符
+#  
 ###########################################################################
 #
 #   ControlViewID:
@@ -44,28 +61,37 @@
 #  
 #     InvisibleWhenISee
 #     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
-#     若设置为 true 表示: 当我自己在装备面板中查看装备时, 隐藏它的外观
+#     若设置为 true 表示: 当我自己在装备面板中查看装备时隐藏它的外观
 #     没有此字段, 或设为 false 表示: 不隐藏它的外观
-#  
-###########################################################################
 #
 #     InvisibleWhenTheySee
 #     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
-#     若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观
+#     若设置为 true 表示: 当其他人查看我的装备时隐藏它的外观
 #     没有此字段, 或设为 false 表示: 不隐藏它的外观
 #
 ###########################################################################
 #
 #   AnnouceRules
-#   可选节点, 值为数值类型, 属于 ItemID 的子节点
-#   控制物品掉落时的特殊公告时机
-#   
-#   &1 - 打死魔物, 魔物将道具掉落到地上时公告
-#   &2 - 打死魔物, 掉落 MVP 奖励到玩家的背包时公告
-#   &4 - 使用"偷窃"技能, 从魔物身上偷到物品时公告
-#   
-#   这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加 (填写 3 即可)
+#   可选节点, 列表, 属于 ItemID 的子节点
+#   该节点中的选项用于控制物品掉落时的特殊公告时机
 #
+###########################################################################
+#  
+#     DropToGround
+#     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
+#     若设置为 true 表示: 当打死魔物死亡后将道具掉落到地上时公告
+#     没有此字段, 或设为 false 表示: 该场景下不公告
+#  
+#     DropToInventoryForMVP
+#     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
+#     若设置为 true 表示: 当打死魔物掉落 MVP 道具到玩家背包时公告
+#     没有此字段, 或设为 false 表示: 该场景下不公告
+#  
+#     StealToInventory
+#     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
+#     若设置为 true 表示: 使用"偷窃"技能从魔物身上偷到此物品时公告
+#     没有此字段, 或设为 false 表示: 该场景下不公告
+#  
 ###########################################################################
 
 #--------------------------------------------------------------------------
@@ -86,11 +112,17 @@ Header:
 
 Body:
 #  - ItemID: 2207
-#    Property: 0
+#    Property:
+#      AvoidConsumeForUse: false
+#      AvoidConsumeForSkill: false
+#      IsAmuletItem: false
 #    ControlViewID:
 #      InvisibleWhenISee: false
 #      InvisibleWhenTheySee: false
-#    AnnouceRules: 0
+#    AnnouceRules:
+#      DropToGround: false
+#      DropToInventoryForMVP: false
+#      StealToInventory: false
 
 Footer:
   Imports:
