--- a/tools/python/Pipfile
+++ b/tools/python/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 opencc-python-reimplemented = ">=0.1.5"
-pdbparse = "==1.5"
+pdbparse = {version = "==1.5", sys_platform = "=='win32'"}
 pefile = "==2019.4.18"
 colorama = ">=0.4.3"
 chardet = ">=3.0.4"
